--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,11 +1,3 @@
-.site-header
-{
-  border-bottom: 1px solid #ccc;
-  padding: .5em 1em;
-  display: flex;
-  justify-content: space-between;
-}
-
 .site-identity h1
 {
   font-size: 1.5em;
@@ -25,4 +17,193 @@
 {
   display: inline-block;
   margin: 1.4em 1em 1em 1em;
+}
+
+body
+{
+  background-image: url('Pictures/Banner.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  display:grid;
+}
+
+.headLink
+{
+  font-size: 17px;
+  text-align: left;
+  line-height: 36px;
+  font-family: Verdana, sans-serif;
+  font-variant: small-caps
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 300;
+}
+
+a:link
+{
+     text-decoration: none;
+}
+
+a:visited
+{
+     text-decoration: none;
+}
+
+a:hover
+{
+     text-decoration: none;
+}
+
+a:active
+{
+     text-decoration: none;
+}
+
+a
+{
+  color: #e6e6e6;
+}
+
+h1
+{
+  font-family: Arial, sans-serif;
+  font-size: 50px;
+  color: #f2f2f2;
+  text-align: center;
+  margin: 0;
+  padding: 20px;
+  text-transform: uppercase;
+}
+
+/* HEADING STYLE */
+.one h1 {
+  text-align: center;
+  text-transform: uppercase;
+  padding-bottom: 5px;
+  font-weight: normal;
+  letter-spacing: 20px;
+}
+
+.one h1:before {
+  width: 28px;
+  height: 5px;
+  display: block;
+  content: "";
+  position: absolute;
+  bottom: 3px;
+  left: 50%;
+  margin-left: -14px;
+  background-color: #b80000;
+}
+
+.one h1:after {
+  width: 100px;
+  height: 1px;
+  display: block;
+  content: "";
+  position: relative;
+  margin-top: 25px;
+  left: 50%;
+  margin-left: -50px;
+  background-color: #b80000;
+}
+
+/* Social buttons */
+.wrapper{
+  display:inline-flex;
+}
+
+.wrapper .icon{
+  margin: 0 20px;
+  cursor:pointer;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  flex-direction:column;
+  position: relative;
+  z-index:2;
+}
+
+.wrapper .icon span{
+  position:relative;
+  z-index:2;
+  height: 40px;
+  width: 40px;
+  display:block;
+  background: #fff;
+  box-shadow: 0 10px 10px rgba(0,0,0,0.1);
+  border-radius:50%;
+  text-align:center;
+  transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.wrapper .icon span i{
+  font-size:25px;
+  line-height:60px;
+}
+
+.wrapper .icon .tooltip{
+  position:absolute;
+  top:0px;
+  background: #fff;
+  box-shadow: 0 10px 10px rgba(0,0,0,0.1);
+  font-size: 20px;
+  padding: 10px 18px;
+  border-radius: 25px;
+  color:white;
+  opacity:0;
+  pointer-events: none;
+  transition: all 0.4s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.wrapper .icon:hover .tooltip{
+  opacity:1;
+  pointer-events: auto;
+  top:-70px;
+}
+
+.wrapper .icon .tooltip:before{
+  position:absolute;
+  content:"";
+  height:15px;
+  width:15px;
+  bottom:-8px;
+  left:50%;
+  transform: translateX(-50%) rotate(45deg);
+}
+.wrapper .icon:hover span,
+.wrapp .icon:hover .tooltip{
+  text-shadow: 0px -1px 0px rgba(0,0,0,0.4);
+}
+.wrapper .icon:hover span{
+  color: #fff;
+}
+
+.wrapper .spotify:hover span,
+.wrapper .spotify:hover .tooltip,
+.wrapper .spotify:hover .tooltip:before{
+  background:#1db954;
+}
+.wrapper .instagram:hover span,
+.wrapper .instagram:hover .tooltip,
+.wrapper .instagram:hover .tooltip:before{
+  background:#d62976;
+}
+.wrapper .soundcloud:hover span,
+.wrapper .soundcloud:hover .tooltip,
+.wrapper .soundcloud:hover .tooltip:before{
+  background:#ff7700;
+}
+.wrapper .youtube:hover span,
+.wrapper .youtube:hover .tooltip,
+.wrapper .youtube:hover .tooltip:before{
+  background:#de463b;
+}
+
+svg {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: auto;
+    padding-top: 10px; //margin-top doesn't work
 }
