--- a/stylesheet.css
+++ b/stylesheet.css
@@ -233,7 +233,7 @@ svg {
 #current-image {
   width: 100%;
   margin-top: 40px;
-  border: 5px solid #555;
+  border: 2px solid #1a1a1a;
 }
 
 #image-thumbs {
